--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+.tag {
+    @apply text-sm h-fit px-2 py-[2px] whitespace-nowrap rounded-full border border-gray-400;
+ }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.filterShadow {
+    box-shadow: 0px 0px 29px -15px rgba(0,0,0,0.52);
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.jobWidth {
+    width: calc(50% - 5px);
+}
+@media (max-width: 1279px) {
+    .jobWidth {
+        width: 100%;
+    }
 }
